Add some more experiments
